Description: EMF+ shapes are not filling when the brush style is a solid color. Steps to Reproduce: Open test image EMF+ file Actual Results: Notice that the top shapes do not have a fill color. Expected Results: Images should have purple fill color. Reproducible: Always User Profile Reset: No Additional Info: This is caused because we aren't handling brushes with a solid fill color.
Created attachment 156636 [details] test_libuemf_p_ref.emf test image from the libUEMF project
Created attachment 156637 [details] How test_libuemf_p_ref.emf should display
Created attachment 156638 [details] How test_libuemf_p_ref.emf displays
I have submitted a patch to gerrit to fix this: https://gerrit.libreoffice.org/#/c/85343/
Chris Sherlock committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/commit/e356b371373ed6d047efac9913bc69cb2bfa0105 tdf#129459 drawinglayer: fill shapes with solid color brush It will be available in 6.5.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Verified in Version: 6.5.0.0.alpha0+ Build ID: fb1eac64df88baae9f211d052793773686c0e180 CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US Calc: threaded @Chris Sherlock, thanks for fixing this issue! Should it be closed as RESOLVED FIXED ?
Chris Sherlock committed a patch related to this issue. It has been pushed to "libreoffice-6-4": https://git.libreoffice.org/core/commit/aa0ef3859d88419477572aaa2bf351dec77807c4 tdf#129459 drawinglayer: fill shapes with solid color brush It will be available in 6.4.0.2. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Absolutely, it should be resolved fixed.
(In reply to Chris Sherlock from comment #8) > Absolutely, it should be resolved fixed. Hi Chris, Ok, closing as RESOLVED FIXED. In the future, you can do it yourself, normally developers close the bugs once their work is done. Thanks for fixing this issue.