tdf#129459 drawinglayer: fill shapes with solid color brush

EMF+ shapes were not filling when the brush style is a solid color. This
patch fixes this issue.

Change-Id: I6a2b12e514af9a85f50198dceee642fac8df2f1b